# xTests

./: .gitignore  CMakeLists.txt  INSTALL.txt
cmake/: xTestsConfig.cmake.in
docs/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt
examples/c/: CMakeLists.txt
examples/c/example.c.runner/: CMakeLists.txt
examples/c/example.c.tests/: CMakeLists.txt
src/: CMakeLists.txt
test/: CMakeLists.txt
test/scratch/test.scratch.basics1/: CMakeLists.txt
test/scratch/test.scratch.basics2/: CMakeLists.txt
test/scratch/test.scratch.fail_all.1/: CMakeLists.txt
test/scratch/test.scratch.setup.fail/: CMakeLists.txt
test/scratch/test.scratch.string_slices.c/: CMakeLists.txt
test/scratch/test.scratch.temp_directory/: CMakeLists.txt
test/scratch/test.scratch.temp_file/: CMakeLists.txt
test/scratch/test.scratch.verbosity_levels/: CMakeLists.txt
